--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,8 @@
 .color_Home {
   background-color: rgba(29, 44, 65, 0.863);
   background-image: url("../../assets/home_logout.png");
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat;
+  height: 617px;
 
 }
 
