--- a/src/pages/products/products.css
+++ b/src/pages/products/products.css
@@ -1,8 +1,6 @@
 .productImg {
   width: 100%;
   height: 100%;
-  /* width: 300px; */
-  /* height: 200px; */
 }
 
 p {
@@ -12,7 +10,8 @@ p {
 }
 
 .price {
-  color: rgb(152, 140, 123);
+  color: black;
+  font-weight: 700;
 }
 
 .productsWrap {
@@ -21,6 +20,7 @@ p {
   flex-wrap: wrap;
   gap: 40px;
   justify-content: center;
+  padding-bottom: 30px;
 }
 
 .product_Item {
@@ -38,10 +38,7 @@ p {
 .productTitle {
   width: 300px;
   height: 100px;
-  /* white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 300px; */
+  font-weight: 800;
 }
 
 .searchWrap {
@@ -90,4 +87,13 @@ a {
 .addButtonWrap {
   display: flex;
   justify-content: center;
+}
+
+@media (max-width: 768px) {
+  .carton_Icon_blok {
+    position: fixed;
+    right: 10px;
+    top: 88px;
+    width: 60px;
+}
 }
