--- a/src/pages/productsDetails/productsDetails.css
+++ b/src/pages/productsDetails/productsDetails.css
@@ -41,8 +41,12 @@ p {
   text-align: center;
   padding-top: 15px;
   font-size: 30px;
-  color: rgb(187, 155, 76);
+  color: black;
   font-weight: 800;
+}
+
+.price_text {
+  font-weight: 700;
 }
 
 .btn_Product_details {
@@ -72,4 +76,25 @@ p {
 
 .linkShoppingCart:hover {
   background-color: gray;
+}
+
+
+@media (max-width: 768px) {
+  .carton_Icon_blok {
+    position: fixed;
+    right: 2px;
+    top: 88px;
+    width: 60px;
+}
+.wrapProductsDetails {
+  display: block;
+  padding-top: 25px;
+}
+.discriptions_Products {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 80px;
+}
 }
