--- a/src/pages/productsDetails/productsDetails.css
+++ b/src/pages/productsDetails/productsDetails.css
@@ -73,6 +73,13 @@ p {
   font-size: 20px;
   padding: 10px;
 }
+.loaderWrap {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .linkShoppingCart:hover {
   background-color: gray;
